--- a/styles/footer.module.css
+++ b/styles/footer.module.css
@@ -1,4 +1,8 @@
+
+@import url('https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@500&display=swap');
+
 .footer {
+    font-family: 'Space Grotesk', sans-serif;
     display: flex;
     flex: 1;
     padding: 2rem 0;
