--- a/styles/globals.css
+++ b/styles/globals.css
@@ -15,4 +15,9 @@ a {
   font-family: 'Space Grotesk', sans-serif;
 }
 
+::selection{
+  background-color: #545659;
+  color: white;
+}
+
 @import url('https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@500&display=swap');
